--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,6 @@
     background: linear-gradient(132deg, #FC415A, #591BC5, #212335);
     background-size: 400% 400%;
     animation: Gradient 15s ease infinite;
-    position: relative;
     height: 100vh;
     width: 100%;
     overflow: hidden;
@@ -81,7 +80,7 @@
     margin:0px;
   }
   .cube {
-    position: absolute;
+   position: absolute;
     top: 80vh;
     left: 45vw;
     width: 10px;
@@ -158,3 +157,30 @@
     color: white;
     margin-bottom: 2%;
   }
+
+  
+
+  #load{
+        position: fixed;
+        left: 0;
+        top: 0;
+        right:0;
+        bottom:0;
+        background: #ffffff;
+    }
+    
+      
+    
+    #load div{
+        position: absolute;
+        left: 45%;
+        top: 35%;
+        text-align:center;
+    }
+    
+      
+    
+    #load div p{
+        margin-top:20px;
+        color:#FFFFFF;
+    }  
