--- a/css/content.css
+++ b/css/content.css
@@ -1,213 +1,13 @@
-* {
-    padding: 0;
-    margin: 0;
-    /* border: 1px solid red */
-  }
-
-  body {
-  
-  }
-
-  header {
-    background-color: white;
-  }
-
-  .heading {
-    margin-top: 20%;
-    margin-bottom: 24%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
- 
-
-  .heading font {
-    background-color:rgb(255, 255, 255);
-    font-size: 30px;
-  }
-
-  .heading h1 {
-    color: white;
-    font-family: 'Roboto Slab', serif;
-    cursor: default;
-    font-size: 100px;
-    transition: 0.3s;
-  }
-
-  .categories {
-    margin-left: 5%;
-    display: flex;
-    margin-top: 5%;
-    margin-bottom: 5%;
-  }
-
-  .categories ul {
-    list-style: none;
-    margin: 0;
-    width: 10%;
-  }
-
-  .categories li {
-    margin: 10px 0;
-  }
-
-  .categories a {
-    width: 100%;
-    color: #000000;
-    text-decoration: none;
-    border-left: 6px solid #3a3a3a;
-    display: block;
-    padding-left: 25px;
-    height: 44px;
-    line-height: 44px;
-    font-size: 20px;
-    transition: 0.3s linear;
-  }
-
-  .categories a:hover {
-    color: rgb(117, 122, 173);
-  }
-
-  .background {
-    background: linear-gradient(132deg, #FC415A, #591BC5, #212335);
-    background-size: 400% 400%;
-    animation: Gradient 15s ease infinite;
-    height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    padding:0;
-    margin:0px;
-  }
-  .cube {
-   position: absolute;
-    top: 80vh;
-    left: 45vw;
-    width: 10px;
-    height: 10px;
-    border: solid 1px #D7D4E4;
-    transform-origin: top left;
-    transform: scale(0) rotate(0deg) translate(-50%, -50%);
-    animation: cube 12s ease-in forwards infinite;
-  }
-  .cube:nth-child(2n) {
-    border-color: #FFF ;
-  }
-  .cube:nth-child(2) {
-    animation-delay: 2s;
-    left: 25vw;
-    top: 40vh;
-  }
-  .cube:nth-child(3) {
-    animation-delay: 4s;
-    left: 75vw;
-    top: 50vh;
-  }
-  .cube:nth-child(4) {
-    animation-delay: 6s;
-    left: 90vw;
-    top: 10vh;
-  }
-  .cube:nth-child(5) {
-    animation-delay: 8s;
-    left: 10vw;
-    top: 85vh;
-  }
-  .cube:nth-child(6) {
-    animation-delay: 10s;
-    left: 50vw;
-    top: 10vh;
-  }
-
-  /* Animate Background*/
-  @keyframes Gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  @keyframes cube {
-    from {
-      transform: scale(0) rotate(0deg) translate(-50%, -50%);
-      opacity: 1;
-    }
-    to {
-      transform: scale(20) rotate(960deg) translate(-50%, -50%);
-      opacity: 0;
-    }
-  }
-
-
-  footer {
-    background-color: black;
-    padding-top: 3%;
-    text-align: center;
-  }
-
-  .discord {
-      margin-right: 70%;
-  }
- footer a {
-    text-decoration: none;
-    color: white;
-    margin-bottom: 2%;
-  }
-
-  .contenthide {
-    display:none;
-  }
-
-  .content {
-    border-radius: 10px;
-    background: rgb(184,160,255);
-    background: linear-gradient(90deg, rgba(184,160,255,1) 0%, rgba(255,179,235,1) 100%);
-    padding: 5%;
-    width: 70%;
-    margin-left: 10%;
-    -webkit-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
-  }
-  .click {
-    display: flex;
-  }
-
-  #load{
-        position: fixed;
-        left: 0;
-        top: 0;
-        right:0;
-        bottom:0;
-        background: #ffffff;
-    }
-    
-      
-    
-    #load div{
-        position: absolute;
-        left: 45%;
-        top: 35%;
-        text-align:center;
-    }
-    
-      
-    
-    #load div p{
-        margin-top:20px;
-        color:#FFFFFF;
-    }  
-
-
-
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap");
 /* This pen */
-
+body {
+  font-family: "Baloo 2", cursive;
+  font-size: 16px;
+  color: #ffffff;
+  text-rendering: optimizeLegibility;
+  background: #110f16;
+  font-weight: initial;
+}
 a, a:hover {
   text-decoration: none;
   transition: color 0.3s ease-in-out;
