--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,30 @@
   }
 
 
- 
+  /* загрузочный экран */
+#load{
+  position: fixed;
+  left: 0;
+  top: 0;
+  right:0;
+  bottom:0;
+  background: #ffffff;
+}
+  
+#load div{
+  position: absolute;
+  left: 45%;
+  top: 35%;
+  text-align:center;
+}
+  
+#load div p{
+  margin-top:20px;
+  color:#FFFFFF;
+} 
+
+
+
   /* шапка */
   .heading {
     margin-top: 20%;
@@ -154,71 +177,40 @@
 
 
 
-  
-
-  .contenthide {
-    display:none;
-  }
-
-  .content {
-    border-radius: 10px;
-    background: rgb(184,160,255);
-    background: linear-gradient(90deg, rgba(184,160,255,1) 0%, rgba(255,179,235,1) 100%);
-    padding: 5%;
-    width: 70%;
-    margin-left: 10%;
-    -webkit-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
-  }
-  .click {
-    display: flex;
-  }
-
-  #load{
-        position: fixed;
-        left: 0;
-        top: 0;
-        right:0;
-        bottom:0;
-        background: #ffffff;
-    }
-    
-      
-    
-    #load div{
-        position: absolute;
-        left: 45%;
-        top: 35%;
-        text-align:center;
-    }
-    
-      
-    
-    #load div p{
-        margin-top:20px;
-        color:#FFFFFF;
-    }  
+/* контент */
+.content {
+  border-radius: 10px;
+  background: rgb(184,160,255);
+  background: linear-gradient(90deg, rgba(184,160,255,1) 0%, rgba(255,179,235,1) 100%);
+  padding: 5%;
+  width: 70%;
+  margin-left: 10%;
+  -webkit-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
+}
+ 
 
 
-
+/* карточки */
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap");
-/* This pen */
 
 a, a:hover {
   text-decoration: none;
   transition: color 0.3s ease-in-out;
 }
+
 .container {
   margin-top: 2rem;
 }
+
 #pageHeaderTitle {
   margin: 2rem 0;
   text-transform: uppercase;
   text-align: center;
   font-size: 2.5rem;
 }
-/* Cards */
+
 .postcard {
   flex-wrap: wrap;
   display: flex;
@@ -230,31 +222,12 @@ a, a:hover {
   position: relative;
   color: #ffffff;
 }
+
 .postcard a {
   color: inherit;
 }
 
-/* авторы */ 
-#ankeer {
-  color: rgb(255, 117, 117);
-}
-#ankeer:hover {
-  color: rgb(255, 43, 43);
-}
-
-#boxemno {
-  color: rgb(140, 169, 250);
-}
-#boxemno:hover {
-  color:rgb(66, 116, 255); 
-}
-
-.hr1{
-
-  margin-bottom: -10px;
-  color:#d8bbff;
-}
-
+/* кнопка скачивания */
 .download {
   margin-top: 5%;
   text-align: center;
@@ -263,32 +236,37 @@ a, a:hover {
   padding: 1%;
   transition: 0.3s;
 }
-
 .download:hover{
   border-radius: 8px;
   transition: 0.3s;
 }
 
+/* дизайн карточек */
 .postcard h1, .postcard .h1 {
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
 }
+
 .postcard .small {
   font-size: 80%;
 }
+
 .postcard .postcard__title {
   font-size: 1.75rem;
 }
+
 .postcard .postcard__img {
   max-height: 180px;
   width: 100%;
   object-fit: cover;
   position: relative;
 }
+
 .postcard .postcard__img_link {
   display: contents;
 }
+
 .postcard .postcard__bar {
   width: 50px;
   height: 10px;
@@ -297,12 +275,14 @@ a, a:hover {
   background-color: #424242;
   transition: width 0.2s ease;
 }
+
 .postcard .postcard__text {
   padding: 1.5rem;
   position: relative;
   display: flex;
   flex-direction: column;
 }
+
 .postcard .postcard__preview-txt {
   overflow: hidden;
   cursor: default;
@@ -310,6 +290,7 @@ a, a:hover {
   text-align: justify;
   height: 100%;
 }
+
 .postcard .postcard__tagbox {
   display: flex;
   flex-flow: row wrap;
@@ -318,6 +299,7 @@ a, a:hover {
   padding: 0;
   justify-content: center;
 }
+
 .postcard .postcard__tagbox .tag__item {
   display: inline-block;
   background: rgba(83, 83, 83, 0.4);
@@ -328,9 +310,11 @@ a, a:hover {
   user-select: none;
   transition: background-color 0.3s;
 }
+
 .postcard .postcard__tagbox .tag__item:hover {
   background: rgba(83, 83, 83, 0.8);
 }
+
 .postcard:before {
   content: "";
   position: absolute;
@@ -342,9 +326,11 @@ a, a:hover {
   opacity: 1;
   border-radius: 10px;
 }
+
 .postcard:hover .postcard__bar {
   width: 100px;
 }
+
 @media screen and (min-width: 769px) {
   .postcard {
     flex-wrap: inherit;
@@ -392,6 +378,7 @@ a, a:hover {
     transform: rotate(-4deg);
   }
 }
+
 @media screen and (min-width: 1024px) {
   .postcard .postcard__text {
     padding: 2rem 3.5rem;
@@ -407,32 +394,69 @@ a, a:hover {
     width: 55px;
   }
 }
-/* COLORS */
 
+/* цвет */
 .postcard .postcard__tagbox .blue.play:hover {
   background: #ffa5f7;
 }
+
 .blue .postcard__title:hover {
   color: #bbf1ff;
 }
+
 .blue .postcard__bar {
   background-color: #ff9bff;
 }
+
 .blue::before {
   background-image: linear-gradient(-30deg, rgba(0, 118, 189, 0.1), transparent 50%);
 }
+
 .blue:nth-child(2n)::before {
   background-image: linear-gradient(30deg, rgba(0, 118, 189, 0.1), transparent 50%);
 }
 
 @media screen and (min-width: 769px) {
-  .green::before {
+  .blue::before {
     background-image: linear-gradient(-80deg, rgba(121, 221, 9, 0.1), transparent 50%);
   }
-  .green:nth-child(2n)::before {
+  .blue:nth-child(2n)::before {
     background-image: linear-gradient(80deg, rgba(121, 221, 9, 0.1), transparent 50%);
   }
 }
+
+
+/* авторы */ 
+#ankeer {
+  color: rgb(255, 117, 117);
+}
+#ankeer:hover {
+  color: rgb(255, 43, 43);
+}
+
+#boxemno {
+  color: rgb(140, 169, 250);
+}
+#boxemno:hover {
+  color:rgb(66, 116, 255); 
+}
+
+
+/* персонажи */
+#pers {
+  color:rgb(180, 255, 180);
+}
+#pers:hover {
+  color: rgb(78, 250, 78);
+}
+
+/* Линия */
+.hr1{
+  margin-bottom: -10px;
+  color:#d8bbff;
+}
+
+
 
 
 
@@ -446,6 +470,7 @@ footer {
 .discord {
   margin-right: 70%;
 }
+
 footer a {
   text-decoration: none;
   color: white;
