--- a/css/games.css
+++ b/css/games.css
@@ -1,27 +1,22 @@
+/* карточки */
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap");
-/* This pen */
-body {
-  font-family: "Baloo 2", cursive;
-  font-size: 16px;
-  color: #ffffff;
-  text-rendering: optimizeLegibility;
-  background: #110f16;
-  font-weight: initial;
-}
+
 a, a:hover {
   text-decoration: none;
   transition: color 0.3s ease-in-out;
 }
+
 .container {
   margin-top: 2rem;
 }
+
 #pageHeaderTitle {
   margin: 2rem 0;
   text-transform: uppercase;
   text-align: center;
   font-size: 2.5rem;
 }
-/* Cards */
+
 .postcard {
   flex-wrap: wrap;
   display: flex;
@@ -33,29 +28,59 @@ a, a:hover {
   position: relative;
   color: #ffffff;
 }
+
 .postcard a {
   color: inherit;
 }
+
+/* кнопка скачивания */
+.download {
+  margin-top: 5%;
+  text-align: center;
+  width: 15%;
+  background-color: rgb(160, 161, 226);
+  padding: 1%;
+  transition: 0.3s;
+}
+.download:hover{
+  border-radius: 8px;
+  transition: 0.3s;
+}
+
+/* дизайн карточек */
+#pageHeaderTitle {
+  text-decoration: underline;
+  color:white;
+  cursor: default;
+  margin-top: -5%;
+  margin-bottom: 7%;
+}
+
 .postcard h1, .postcard .h1 {
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
 }
+
 .postcard .small {
   font-size: 80%;
 }
+
 .postcard .postcard__title {
   font-size: 1.75rem;
 }
+
 .postcard .postcard__img {
   max-height: 180px;
   width: 100%;
   object-fit: cover;
   position: relative;
 }
+
 .postcard .postcard__img_link {
   display: contents;
 }
+
 .postcard .postcard__bar {
   width: 50px;
   height: 10px;
@@ -64,18 +89,22 @@ a, a:hover {
   background-color: #424242;
   transition: width 0.2s ease;
 }
+
 .postcard .postcard__text {
   padding: 1.5rem;
   position: relative;
   display: flex;
   flex-direction: column;
 }
+
 .postcard .postcard__preview-txt {
   overflow: hidden;
+  cursor: default;
   text-overflow: ellipsis;
   text-align: justify;
   height: 100%;
 }
+
 .postcard .postcard__tagbox {
   display: flex;
   flex-flow: row wrap;
@@ -84,6 +113,7 @@ a, a:hover {
   padding: 0;
   justify-content: center;
 }
+
 .postcard .postcard__tagbox .tag__item {
   display: inline-block;
   background: rgba(83, 83, 83, 0.4);
@@ -94,9 +124,11 @@ a, a:hover {
   user-select: none;
   transition: background-color 0.3s;
 }
+
 .postcard .postcard__tagbox .tag__item:hover {
   background: rgba(83, 83, 83, 0.8);
 }
+
 .postcard:before {
   content: "";
   position: absolute;
@@ -108,9 +140,11 @@ a, a:hover {
   opacity: 1;
   border-radius: 10px;
 }
+
 .postcard:hover .postcard__bar {
   width: 100px;
 }
+
 @media screen and (min-width: 769px) {
   .postcard {
     flex-wrap: inherit;
@@ -122,6 +156,7 @@ a, a:hover {
     justify-content: start;
   }
   .postcard .postcard__img {
+    cursor: default;
     max-width: 300px;
     max-height: 100%;
     transition: transform 0.3s ease;
@@ -157,10 +192,12 @@ a, a:hover {
     transform: rotate(-4deg);
   }
 }
+
 @media screen and (min-width: 1024px) {
   .postcard .postcard__text {
     padding: 2rem 3.5rem;
   }
+  
   .postcard .postcard__text:before {
     content: "";
     position: absolute;
@@ -171,92 +208,65 @@ a, a:hover {
     width: 55px;
   }
 }
-/* COLORS */
-.postcard .postcard__tagbox .green.play:hover {
-  background: #79dd09;
-  color: black;
-}
-.green .postcard__title:hover {
-  color: #79dd09;
-}
-.green .postcard__bar {
-  background-color: #79dd09;
-}
-.green::before {
-  background-image: linear-gradient(-30deg, rgba(121, 221, 9, 0.1), transparent 50%);
-}
-.green:nth-child(2n)::before {
-  background-image: linear-gradient(30deg, rgba(121, 221, 9, 0.1), transparent 50%);
-}
+
+/* цвет */
 .postcard .postcard__tagbox .blue.play:hover {
-  background: #0076bd;
+  background: #ffa5f7;
 }
+
 .blue .postcard__title:hover {
-  color: #0076bd;
+  color: #bbf1ff;
 }
+
 .blue .postcard__bar {
-  background-color: #0076bd;
+  background-color: #ff9bff;
 }
+
 .blue::before {
   background-image: linear-gradient(-30deg, rgba(0, 118, 189, 0.1), transparent 50%);
 }
+
 .blue:nth-child(2n)::before {
   background-image: linear-gradient(30deg, rgba(0, 118, 189, 0.1), transparent 50%);
 }
-.postcard .postcard__tagbox .red.play:hover {
-  background: #bd150b;
-}
-.red .postcard__title:hover {
-  color: #bd150b;
-}
-.red .postcard__bar {
-  background-color: #bd150b;
-}
-.red::before {
-  background-image: linear-gradient(-30deg, rgba(189, 21, 11, 0.1), transparent 50%);
-}
-.red:nth-child(2n)::before {
-  background-image: linear-gradient(30deg, rgba(189, 21, 11, 0.1), transparent 50%);
-}
-.postcard .postcard__tagbox .yellow.play:hover {
-  background: #bdbb49;
-  color: black;
-}
-.yellow .postcard__title:hover {
-  color: #bdbb49;
-}
-.yellow .postcard__bar {
-  background-color: #bdbb49;
-}
-.yellow::before {
-  background-image: linear-gradient(-30deg, rgba(189, 187, 73, 0.1), transparent 50%);
-}
-.yellow:nth-child(2n)::before {
-  background-image: linear-gradient(30deg, rgba(189, 187, 73, 0.1), transparent 50%);
-}
+
 @media screen and (min-width: 769px) {
-  .green::before {
+  .blue::before {
     background-image: linear-gradient(-80deg, rgba(121, 221, 9, 0.1), transparent 50%);
   }
-  .green:nth-child(2n)::before {
+  .blue:nth-child(2n)::before {
     background-image: linear-gradient(80deg, rgba(121, 221, 9, 0.1), transparent 50%);
   }
-  .blue::before {
-    background-image: linear-gradient(-80deg, rgba(0, 118, 189, 0.1), transparent 50%);
-  }
-  .blue:nth-child(2n)::before {
-    background-image: linear-gradient(80deg, rgba(0, 118, 189, 0.1), transparent 50%);
-  }
-  .red::before {
-    background-image: linear-gradient(-80deg, rgba(189, 21, 11, 0.1), transparent 50%);
-  }
-  .red:nth-child(2n)::before {
-    background-image: linear-gradient(80deg, rgba(189, 21, 11, 0.1), transparent 50%);
-  }
-  .yellow::before {
-    background-image: linear-gradient(-80deg, rgba(189, 187, 73, 0.1), transparent 50%);
-  }
-  .yellow:nth-child(2n)::before {
-    background-image: linear-gradient(80deg, rgba(189, 187, 73, 0.1), transparent 50%);
-  }
 }
+
+
+/* авторы */ 
+#ankeer {
+  color: rgb(255, 117, 117);
+}
+#ankeer:hover {
+  color: rgb(255, 43, 43);
+}
+
+#boxemno {
+  color: rgb(140, 169, 250);
+}
+#boxemno:hover {
+  color:rgb(66, 116, 255); 
+}
+
+
+/* персонажи */
+#pers {
+  color:rgb(180, 255, 180);
+}
+#pers:hover {
+  color: rgb(78, 250, 78);
+}
+
+/* Линия */
+.hr1{
+  margin-bottom: -10px;
+  color:#d8bbff;
+}
+
