--- a/css/style.css
+++ b/css/style.css
@@ -168,13 +168,18 @@
   }
 
 
-  
 /* категории */
 .cat {
   display: flex;
-  margin-top: 5%;
-  margin-bottom: 5%;
-  margin-right: 5%;
+}
+
+.parallax {
+  background-image: url('/images/bg.jpg');
+  background-attachment: fixed;
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size: 100%;
+  box-shadow:0 0 0 1000px rgba(0, 0, 0, 0.158) inset;
 }
 
 .categories h2 {
@@ -186,6 +191,8 @@
 }
 
 .categories {
+  margin-bottom: 5%;
+  margin-top: 5%;
   padding-top:2%;
   padding-left: 0.5%;
   width:20%;
@@ -229,6 +236,9 @@
 
 /* контент */
 .content {
+  margin-right: 3%;
+  margin-bottom: 5%;
+  margin-top: 5%;
   border-radius: 10px;
   background: rgb(184,160,255);
   background: linear-gradient(90deg, rgba(184,160,255,1) 0%, rgba(255,179,235,1) 100%);
@@ -513,9 +523,6 @@ a, a:hover {
   margin-bottom: -10px;
   color:#d8bbff;
 }
-
-
-
 
 
 /* футер */
