--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     top: 0;
     right: 0;
     bottom: 0;
-    background: #ffffff;
+    background: #000000;
     z-index: 30;
   }
   
@@ -36,13 +36,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* centering end */
   }
 
   .textloading {
-    background-color:black;
+    background-color:rgb(255, 255, 255);
     font-size: 20px;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     
   }
