--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@
 }
 
 .parallax {
-  background-image: url('/images/bg.jpg');
+  background-image: url('./images/bg.jpg');
   background-attachment: fixed;
   background-repeat:no-repeat;
   background-position:center;
