--- a/css/discord.css
+++ b/css/discord.css
@@ -17,10 +17,12 @@ a, a:hover {
   font-size: 2.5rem;
 }
 
-.postcard {
+.postcard2 {
   flex-wrap: wrap;
   display: flex;
-  background-color: #18151f;
+  background-image: url('../images/bgdisc.jpg');
+  background-position:center;
+  background-size:80%;
   box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
   border-radius: 10px;
   margin: 0 0 2rem 0;
@@ -29,20 +31,20 @@ a, a:hover {
   color: #ffffff;
 }
 
-.postcard a {
+.postcard2 a {
   color: inherit;
 }
 
 /* кнопка скачивания */
-.download {
+.download2 {
   margin-top: 5%;
   text-align: center;
-  width: 15%;
+  width: 35%;
   background-color: rgb(160, 161, 226);
   padding: 1%;
   transition: 0.3s;
 }
-.download:hover{
+.download2:hover{
   border-radius: 8px;
   transition: 0.3s;
 }
@@ -56,32 +58,22 @@ a, a:hover {
   margin-bottom: 7%;
 }
 
-.postcard h1, .postcard .h1 {
+.postcard2 h1, .postcard .h1 {
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
 }
 
-.postcard .small {
+.postcard2 .small {
   font-size: 80%;
 }
 
-.postcard .postcard__title {
+.postcard2 .postcard__title {
   font-size: 1.75rem;
 }
 
-.postcard .postcard__img {
-  max-height: 180px;
-  width: 100%;
-  object-fit: cover;
-  position: relative;
-}
 
-.postcard .postcard__img_link {
-  display: contents;
-}
-
-.postcard .postcard__bar {
+.postcard2 .postcard__bar {
   width: 50px;
   height: 10px;
   margin: 10px 0;
@@ -90,14 +82,14 @@ a, a:hover {
   transition: width 0.2s ease;
 }
 
-.postcard .postcard__text {
+.postcard2 .postcard__text {
   padding: 1.5rem;
   position: relative;
   display: flex;
   flex-direction: column;
 }
 
-.postcard .postcard__preview-txt {
+.postcard2 .postcard__preview-txt {
   overflow: hidden;
   cursor: default;
   text-overflow: ellipsis;
@@ -105,7 +97,7 @@ a, a:hover {
   height: 100%;
 }
 
-.postcard .postcard__tagbox {
+.postcard2 .postcard__tagbox {
   display: flex;
   flex-flow: row wrap;
   font-size: 14px;
@@ -114,7 +106,7 @@ a, a:hover {
   justify-content: center;
 }
 
-.postcard .postcard__tagbox .tag__item {
+.postcard2 .postcard__tagbox .tag__item {
   display: inline-block;
   background: rgba(83, 83, 83, 0.4);
   border-radius: 3px;
@@ -125,11 +117,11 @@ a, a:hover {
   transition: background-color 0.3s;
 }
 
-.postcard .postcard__tagbox .tag__item:hover {
-  background: rgba(83, 83, 83, 0.8);
+.postcard2 .postcard__tagbox .tag__item:hover {
+  background: rgba(71, 65, 65, 0.8);
 }
 
-.postcard:before {
+.postcard2:before {
   content: "";
   position: absolute;
   top: 0;
@@ -141,31 +133,31 @@ a, a:hover {
   border-radius: 10px;
 }
 
-.postcard:hover .postcard__bar {
+.postcard2:hover .postcard__bar {
   width: 100px;
 }
 
 @media screen and (min-width: 769px) {
-  .postcard {
+  .postcard2 {
     flex-wrap: inherit;
   }
-  .postcard .postcard__title {
+  .postcard2 .postcard__title {
     font-size: 2rem;
   }
-  .postcard .postcard__tagbox {
+  .postcard2 .postcard__tagbox {
     justify-content: start;
   }
-  .postcard .postcard__img {
+  .postcard2 .postcard__img {
     cursor: default;
     max-width: 300px;
     max-height: 100%;
     transition: transform 0.3s ease;
   }
-  .postcard .postcard__text {
+  .postcard2 .postcard__text {
     padding: 2rem;
     width: 100%;
   }
-  .postcard .media.postcard__text:before {
+  .postcard2 .media.postcard__text:before {
     content: "";
     position: absolute;
     display: block;
@@ -174,43 +166,33 @@ a, a:hover {
     height: 130%;
     width: 55px;
   }
-  .postcard:hover .postcard__img {
+  .postcard2:hover .postcard__img {
     transform: scale(1.1);
   }
-  .postcard:nth-child(2n+1) {
+  .postcard2:nth-child(2n+1) {
     flex-direction: row;
   }
-  .postcard:nth-child(2n+0) {
+  .postcard2:nth-child(2n+0) {
     flex-direction: row-reverse;
   }
-  .postcard:nth-child(2n+1) .postcard__text::before {
+  .postcard2:nth-child(2n+1) .postcard__text::before {
     left: -12px !important;
     transform: rotate(4deg);
   }
-  .postcard:nth-child(2n+0) .postcard__text::before {
+  .postcard2:nth-child(2n+0) .postcard__text::before {
     right: -12px !important;
     transform: rotate(-4deg);
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .postcard .postcard__text {
+  .postcard2 .postcard__text {
     padding: 2rem 3.5rem;
-  }
-  
-  .postcard .postcard__text:before {
-    content: "";
-    position: absolute;
-    display: block;
-    background: #18151f;
-    top: -20%;
-    height: 130%;
-    width: 55px;
   }
 }
 
 /* цвет */
-.postcard .postcard__tagbox .blue.play:hover {
+.postcard2 .postcard__tagbox .blue.play:hover {
   background: #ffa5f7;
 }
 
