--- a/css/discord.css
+++ b/css/discord.css
@@ -220,7 +220,15 @@ a, a:hover {
     background-image: linear-gradient(80deg, rgba(121, 221, 9, 0.1), transparent 50%);
   }
 }
+#ex1 {
+  height: 10%;
+  text-align: center;
+  background-color:black;
+}
 
+#ex1 font {
+  color: white;
+}
 
 /* авторы */ 
 #ankeer {
