--- a/css/discord.css
+++ b/css/discord.css
@@ -54,9 +54,6 @@ a, a:hover {
   transition: 0.3s;
 }
 
-#ex:hover {
-  color: rgb(145, 145, 252);
-}
 
 /* дизайн карточек */
 #pageHeaderTitle {
@@ -230,6 +227,8 @@ a, a:hover {
   }
 }
 
+
+/* пасхалка */
 #ex1 {
   height: 10%;
   text-align: center;
@@ -240,6 +239,9 @@ a, a:hover {
   color: white;
 }
 
+#ex:hover {
+  color: rgb(145, 145, 252);
+}
 
 
 /* авторы */ 
