--- a/css/discord.css
+++ b/css/discord.css
@@ -1,3 +1,84 @@
+/* контент */
+.content {
+  margin-right: 3%;
+  margin-bottom: 5%;
+  margin-top: 5%;
+  border-radius: 10px;
+  background: rgb(184,160,255);
+  background: linear-gradient(90deg, rgba(184,160,255,1) 0%, rgba(255,179,235,1) 100%);
+  padding: 5%;
+  width: 70%;
+  margin-left: 10%;
+  -webkit-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
+}
+ 
+
+/* категории */
+.cat {
+  display: flex;
+}
+
+.parallax {
+  background-image: url('../images/bg.jpg');
+  background-attachment: fixed;
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size: 100%;
+  box-shadow:0 0 0 1000px rgba(0, 0, 0, 0.158) inset;
+}
+
+.categories h2 {
+  text-align: center;
+  color:white;
+  margin-bottom: 10%;
+  cursor: default;
+  text-decoration: underline;
+}
+
+.categories {
+  margin-bottom: 5%;
+  margin-top: 5%;
+  padding-top:2%;
+  margin-bottom: 50%;
+  padding-left: 0.5%;
+  width:20%;
+  background: rgb(216,77,255);
+  background: linear-gradient(90deg, rgba(216,77,255,1) 0%, rgba(184,160,255,1) 100%);
+  -webkit-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
+  margin-left: 3%;
+  border-radius: 10px;
+}
+
+.categories ul {
+  list-style: none;
+  width: 10%;
+}
+
+.categories li {
+  margin: 10px 0;
+}
+
+.categories p {
+  cursor: pointer;
+  width: 100%;
+  color: #ffffff;
+  text-decoration: none;
+  border-left: 6px solid #ffffff;
+  display: block;
+  padding-left: 25px;
+  height: 44px;
+  line-height: 44px;
+  font-size: 20px;
+  transition: 0.3s linear;
+}
+
+.categories p:hover {
+  color: rgb(0, 0, 0);
+}
 
 
 
