--- a/css/discord.css
+++ b/css/discord.css
@@ -15,6 +15,7 @@
 }
  
 
+
 /* категории */
 .cat {
   display: flex;
@@ -104,7 +105,6 @@ a, a:hover {
 .postcard2 {
   flex-wrap: wrap;
   display: flex;
-  background-image: url('../images/bgdisc.jpg');
   background-position:center;
   background-size:80%;
   box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
@@ -115,26 +115,37 @@ a, a:hover {
   color: #ffffff;
 }
 
+
 .postcard2 a {
   color: inherit;
 }
 
 
 
-/* кнопка приглашения */
+/* кнопка приглашения+скачивания */
 .invite {
   margin-top: 5%;
   text-align: center;
   width: 35%;
   background-color: rgb(160, 161, 226);
   padding: 1%;
-  transition: 0.3s;
+  cursor:not-allowed;
+  opacity: 0.5;
 }
-.invite:hover{
-  border-radius: 8px;
+
+
+.download-beta {
+  width: 15%;
+  background-color:rgb(160, 161, 226);
+  cursor: pointer;
+  opacity: 1;
   transition: 0.3s;
 }
 
+.download-beta:hover {
+  border-radius: 8px;
+  transition: 0.3s;
+}
 
 /* дизайн карточек */
 #pageHeaderTitle {
@@ -145,10 +156,11 @@ a, a:hover {
   margin-bottom: 7%;
 }
 
-.postcard2 h1, .postcard .h1 {
+.postcard2 h1 {
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
+  cursor: default;
 }
 
 .postcard2 .small {
@@ -223,6 +235,13 @@ a, a:hover {
   width: 100px;
 }
 
+#betterdisc {
+  color: #f9bdff;
+}
+#betterdisc:hover{
+  color: #f063fd ;
+}
+
 @media screen and (min-width: 769px) {
   .postcard2 {
     flex-wrap: inherit;
@@ -281,10 +300,6 @@ a, a:hover {
 /* цвет */
 .postcard2 .postcard__tagbox .blue.play:hover {
   background: #ffa5f7;
-}
-
-.blue .postcard__title:hover {
-  color: #bbf1ff;
 }
 
 .blue .postcard__bar {
