--- a/css/cards.css
+++ b/css/cards.css
@@ -264,8 +264,11 @@ a, a:hover {
     }
   }
   
-  @media all and (min-width:1280px) {
-  
+  @media all and (min-width:720px) and (max-width:1280px){
+    .download {
+      width: 50%;
+    }
+    
 }
 
 /* авторы */ 
