--- a/css/categories.css
+++ b/css/categories.css
@@ -3,58 +3,43 @@
     display: flex;
   }
   
-  .parallax {
-    background-image: url('../images/bg.jpg');
-    background-attachment: fixed;
-    background-repeat:no-repeat;
-    background-position:center;
-    background-size: 100%;
-    box-shadow:0 0 0 1000px rgba(0, 0, 0, 0.158) inset;
-  }
   
-  .categories h2 {
-    text-align: center;
-    color:white;
-    margin-bottom: 10%;
-    cursor: default;
-    text-decoration: underline;
-  }
   
   .categories {
+    justify-content: center;
+    display: flex;
+    border-radius:0;
+    margin-left: 0;
+    margin-top: 0;
     margin-bottom: 5%;
-    margin-top: 5%;
-    padding-top:2%;
-    margin-bottom: 40%;
-    padding-left: 0.5%;
-    width:20%;
+    width:100%;
     background: rgb(216,77,255);
     background: linear-gradient(90deg, rgba(216,77,255,1) 0%, rgba(184,160,255,1) 100%);
     -webkit-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
-    margin-left: 3%;
-    border-radius: 10px;
   }
   
   .categories ul {
     list-style: none;
-    width: 10%;
+    width: 25%;
+    display: flex;
   }
   
+
   .categories li {
-    margin: 10px 0;
+    display: inline-block;
+    margin:auto;
   }
-  
   .categories p {
+    border-left: none;
+    margin: 0;
+    padding: 0;
     cursor: pointer;
     width: 100%;
     color: #ffffff;
     text-decoration: none;
-    border-left: 6px solid #ffffff;
     display: block;
-    padding-left: 25px;
-    height: 44px;
-    line-height: 44px;
     font-size: 20px;
     transition: 0.3s linear;
   }
@@ -63,4 +48,8 @@
     color: rgb(0, 0, 0);
   }
   
-  
+  @media all and(min-width: 720px) and (max-width: 1280px) {
+    .parallax {
+      background-size: 150%;
+    }
+  }
