--- a/css/content.css
+++ b/css/content.css
@@ -1,14 +1,11 @@
 /* контент */
 .content {
-    margin-right: 3%;
-    margin-bottom: 5%;
-    margin-top: 5%;
     border-radius: 10px;
     background: rgb(184,160,255);
     background: linear-gradient(90deg, rgba(184,160,255,1) 0%, rgba(255,179,235,1) 100%);
     padding: 5%;
     width: 70%;
-    margin-left: 10%;
+    margin:auto;
     -webkit-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
