--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,15 @@
   }
 
 
- 
+.parallax {
+  padding-bottom: 10%;
+  background-image: url('../images/bg.jpg');
+  background-attachment: fixed;
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size: 100%;
+  box-shadow:0 0 0 1000px rgba(0, 0, 0, 0.158) inset;
+}
 
 /* футер */
 footer {
