--- a/css/categories.css
+++ b/css/categories.css
@@ -11,6 +11,7 @@
     border-radius:0;
     margin-left: 0;
     margin-top: 0;
+    padding-bottom: 1%;
     margin-bottom: 5%;
     width:100%;
     background: rgb(216,77,255);
@@ -22,15 +23,28 @@
   
   .categories ul {
     list-style: none;
-    width: 25%;
+    width: 35%;
     display: flex;
   }
   
 
+
   .categories li {
     display: inline-block;
     margin:auto;
+    text-align: center;
+    width: 25%;
+    border: 2px solid white;
+    border-radius: 5px;
+    padding: 1%;
+    transition: 0.3s;
   }
+
+  .categories li:hover {
+    background-color: white;
+    transition: 0.3s;
+  }
+
   .categories p {
     border-left: none;
     margin: 0;
