--- a/css/loadscreen.css
+++ b/css/loadscreen.css
@@ -27,6 +27,7 @@
     margin-right: auto;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
