--- a/css/categories.css
+++ b/css/categories.css
@@ -67,3 +67,9 @@
       background-size: 150%;
     }
   }
+
+  @media all and (min-width:200px) and (max-width:400px) {
+    .parallax {
+      background-size: 350%
+    }
+  }
