--- a/css/header.css
+++ b/css/header.css
@@ -107,21 +107,20 @@
     }
   }
 
-  /* @media all and (min-width: 1600px) and (max-width: 1800px) {
-    .heading font {
-      width: 26.2%;
-    }
-  }
-  
+ @media all and (min-width:200px) and (max-width:400px) {
+   .heading h1 {
+     font-size: 40px;
+   }
 
-  @media all and (min-width: 1280px) and (max-width: 1600px){
-    .heading font {
-      width: 33.2%;
-    }
-  }
+   .background {
+     height: 50%;
+   }
 
-  @media all and (min-width:800px) and (max-width:1280px) {
-    .heading font {
-      width: 34%;
-    }
-  } */
+   .cube {
+     display: none;
+   }
+
+   .heading font {
+     font-size: 15px;
+   }
+ }
