--- a/css/content.css
+++ b/css/content.css
@@ -11,3 +11,21 @@
     box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.2);
   }
    
+  #pageHeaderTitle {
+    text-decoration: underline;
+    color:white;
+    cursor: default;
+    margin-top: -5%;
+    margin-bottom: 7%;
+  }
+
+  @media all and (min-width:200px) and (max-width:400px) {
+    .content {
+      width: 100%;
+      border-radius:0px;
+    }
+
+    #pageHeaderTitle {
+      font-size: 20px;
+    }
+  }
