--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,17 @@ iframe {
 }
 
 #dis img {
-  width: 70px;
+  width: 65px;
+}
+
+#dis:hover {
+  filter: brightness(1.15);
+  -webkit-transform: scale(1.1) rotate(360deg);;
+  transition: 0.3s;
 }
 
 #dis {
+  transition: 0.3s;
   display: flex;
   flex-direction: row;
   justify-content: center; 
