--- a/css/loadscreen.css
+++ b/css/loadscreen.css
@@ -1,4 +1,9 @@
 /* загрузочный экран */
+@font-face {
+  font-family: "Lucida";
+  src: url("../fonts/lucida.ttf");
+}
+
 #preloader {
     cursor: default;
     position: fixed;
@@ -38,5 +43,8 @@
     font-size: 20px;
     color: rgb(0, 0, 0);
     text-align: center;
-    
+  }
+
+  .textloading font {
+    font-family: "Lucida";
   }
