--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,9 @@ iframe {
 
 /* футер */
 footer {
+  display:flex;
+  justify-content: center;
+  align-items: center;
   background: linear-gradient(132deg, #FC415A, #591BC5, #212335);
   background-size: 400% 400%;
   animation: Gradient 15s ease infinite;
@@ -72,8 +75,8 @@ box-shadow: 0px -9px 8px 0px rgba(34, 60, 80, 0.2);
 .author {
   width: 5%;
   display: flex;
-  margin-left: 5%;
 }
+
 
 .author a {
   background-color:white;
@@ -90,6 +93,10 @@ box-shadow: 0px -9px 8px 0px rgba(34, 60, 80, 0.2);
   background-color:black;
   color:white;
   transition: 0.3s;
+  -webkit-box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.2);
+-moz-box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.2);
+box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.2);
+-webkit-transform: scale(1.1);
 }
 
 @media all and (min-width:200px) and (max-width:400px){
