--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@
   box-shadow:0 0 0 1000px rgba(0, 0, 0, 0.158) inset;
 }
 
+
+/* Виджет дискорд+кнопка */
 iframe {
   display: none;
 }
@@ -72,11 +74,11 @@ footer {
 box-shadow: 0px -9px 8px 0px rgba(34, 60, 80, 0.2);
 }
 
+/* Автор */
 .author {
   width: 5%;
   display: flex;
 }
-
 
 .author a {
   background-color:white;
@@ -94,9 +96,9 @@ box-shadow: 0px -9px 8px 0px rgba(34, 60, 80, 0.2);
   color:white;
   transition: 0.3s;
   -webkit-box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.2);
--moz-box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.2);
-box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.2);
--webkit-transform: scale(1.1);
+  -moz-box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.2);
+  -webkit-transform: scale(1.1);
 }
 
 @media all and (min-width:200px) and (max-width:400px){
@@ -104,6 +106,14 @@ box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.2);
     background: none;
     box-shadow:none;
     padding-bottom:0% ;
+  }
+
+  .author {
+    width: 9%;
+  }
+
+  .author a {
+    font-size: 20px;
   }
 }
 
